<resources>
    <string name="app_name">MyBookLibrary</string>

    <string name="title_new">New</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_history">History</string>
    <string name="title_detail">Detail</string>

    <string name="favorite_off">bookmark on</string>
    <string name="favorite_on">bookmark off</string>

    <string name="input_keyword_hint">Input Book Keyword</string>
    <string name="search">Search</string>
    <string name="notResult">No Result</string>

    <string name="select_an_avatar">Select an Avatar</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="profile_name_1">Ali Connors</string>
    <string name="profile_image">Profile image</string>
    <string name="user_points">10,000 pts</string>
    <string name="user_rank">#1</string>
    <string name="rank">Rank</string>
    <string name="rank_1">#1</string>
    <string name="wins">Wins</string>
    <string name="wins_amount">42</string>
    <string name="losses">Losses</string>
    <string name="losses_amount">03</string>
    <string name="detailFragment">About</string>
    <string name="welcome">Welcome!</string>
    <string name="about_description">This sample showcases navigation using a Bottom Navigation</string>
    <string name="done">Done</string>

    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_registered">Registered</string>
    <string name="title_list">Leaderboard</string>
    <string name="cd_home">Home</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>
</resources>
